--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@rnmapbox/maps": "^10.0.8-rc.1",
     "json-loader": "^0.5.7",
     "native-base": "^3.4.28",
     "react": "18.1.0",
